# loc_nav_RSS

./: .gitignore  README.md  stamp_cmp.py  start_nav.sh  start_stack.sh  stop.sh  tf_diag.py
src/dynamics_planner_nav/: CMakeLists.txt  package.xml
src/dynamics_planner_nav/.github/: copilot-instructions.md
src/dynamics_planner_nav/deploy/: clear_costmaps.sh  force_state.sh  start_edge_model.sh  stop_planner.sh
src/dynamics_planner_nav/docs/: edge_profile_publisher_spec.md
src/dynamics_planner_nav/launch/: navigation.launch.py
src/dynamics_planner_nav/py_scripts/: edge_model_publisher.py
src/dynamics_planner_nav/rviz/: rviz.rviz
src/dynamics_planner_nav/scripts/: analyze_edge_coverage.py  compare_real_vs_edge.py  edge_modes.py  edge_profile.py  edge_profile_fast.py  grab_real_footprint.py  live_edge_pairs_viewer.py  live_edge_parts_viewer.py  live_edge_viewer.py  plot_obstacle_cost.py  render_real_3d.py  verify_fine_model.py  view_downsample.py  view_edge_pairs.py  view_edge_profile.py
src/dynamics_planner_nav/src/globalPlanners/: GlobalPathHandler.cpp  GlobalPathHandler.hpp  LocalGoalGenerator.cpp  LocalGoalGenerator.hpp
src/dynamics_planner_nav/src/localPlanners/: CollisionChecking.cpp  CollisionChecking.hpp  DDP.cpp  DDP.hpp  DWAPlanner.cpp  DWAPlanner.hpp  DWA_DDPPlanner.cpp  DWA_DDPPlanner.hpp  LocalPlannerBase.cpp  LocalPlannerBase.hpp  MPPIPlanner.cpp  MPPIPlanner.hpp  MPPI_DDPPlanner.cpp  MPPI_DDPPlanner.hpp  Parameters.cpp  TEBPlanner.cpp  TEBPlanner.hpp  TEB_DDPPlanner.cpp  TEB_DDPPlanner.hpp
src/dynamics_planner_nav/src/perception/: DirectionClearance.cpp  DirectionClearance.hpp  LaserScanProcessor.cpp  LaserScanProcessor.hpp
src/dynamics_planner_nav/src/programs/: RunMP.cpp  SwitchMP.cpp
src/dynamics_planner_nav/src/robot/: Go2.cpp  Go2.hpp  Go2_callbacks.cpp  Go2_callbacks.hpp  Go2_footprint.cpp  Go2_footprint.hpp  Go2_parameters.cpp  Go2_parameters.hpp  Go2_prepare.cpp  Go2_prepare.hpp  Go2_publishers.cpp  Go2_publishers.hpp  Go2_stateMachine.cpp  Go2_stateMachine.hpp  Utility.cpp  Utility.hpp
src/dynamics_planner_nav/src/utils/: AsyncTaskExecutor.hpp  collision_publisher.cpp
src/go2_front_camera/: package.xml  setup.cfg  setup.py
src/go2_front_camera/go2_front_camera/: front_camera_node.py
src/go2_front_camera/launch/: front_camera.launch.py
src/go2_front_camera/resource/: go2_front_camera
src/nav_loc_bringup/: package.xml  setup.cfg  setup.py
src/nav_loc_bringup/launch/: bringup.launch.py
src/nav_loc_bringup/rviz/: nav_loc.rviz
src/nav_loc_localization/: package.xml  setup.cfg  setup.py
src/nav_loc_localization/config/: ekf.yaml
src/nav_loc_localization/launch/: localization.launch.py
src/nav_loc_localization/nav_loc_localization/: __init__.py  cloud_restamp.py  joint_state_bridge.py  odom_relay.py  odom_tf_broadcaster.py
src/nav_loc_localization/urdf/: go2.urdf
src/nav_loc_navigation/: package.xml  setup.cfg  setup.py
src/nav_loc_navigation/config/: nav2_params.yaml
src/nav_loc_navigation/launch/: navigation.launch.py  navigation_self_ctrl.launch.py
src/nav_loc_navigation/nav_loc_navigation/: __init__.py  cmd_vel_to_sport.py  estop.py  global_path_provider.py
src/unitree_api/: CMakeLists.txt  package.xml
src/unitree_api/idl/: RequestHeader_.idl  RequestIdentity_.idl  RequestLease_.idl  RequestPolicy_.idl  Request_.idl  ResponseHeader_.idl  ResponseStatus_.idl  Response_.idl
src/unitree_api/msg/: RequestIdentity.msg  RequestSlam.msg  Response.msg  ResponseHeader.msg  ResponseSlam.msg
src/unitree_api/srv/: WebCommand.srv
src/unitree_go/: CMakeLists.txt  package.xml
