<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dynamics_planner_nav</name>
  <version>2.0.0</version>
  <description>Navigation package with DDP, MPPI, DWA, and TEB planners - ROS2 Humble port</description>

  <maintainer email="yuanjielu22@example.com">Yuanjie Lu</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>

  <!-- TF2 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <!-- Nav2 (replaces move_base) -->
  <depend>nav2_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>

  <!-- TEB Local Planner for ROS2 -->
  <depend>teb_local_planner</depend>

  <!-- External libraries -->
  <build_depend>eigen</build_depend>
  <build_depend>OpenCV</build_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- 真机 TF：robot_state_publisher(URDF + /joint_states) -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
