<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_front_camera</name>
  <version>0.1.0</version>
  <description>Bridge that polls the Unitree Go2 main board videohub (api_id=1001, GetImageSample) and republishes the JPEG frames as sensor_msgs/Image and sensor_msgs/CompressedImage over wired Ethernet (CycloneDDS).</description>
  <maintainer email="dev@example.com">dev</maintainer>
  <license>BSD-2-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>unitree_api</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
