<?xml version="1.0"?>
<package format="3">
  <name>nav_loc_bringup</name>
  <version>0.0.1</version>
  <description>Top-level launch + rviz configs for Go2 navigation/localization.</description>
  <maintainer email="you@example.com">v-yuanjielu</maintainer>
  <license>BSD-2-Clause</license>

  <!-- Runtime dependencies on other packages in this workspace. -->
  <exec_depend>nav_loc_localization</exec_depend>
  <exec_depend>nav_loc_navigation</exec_depend>

  <!-- ROS2 packages we launch / use in rviz. -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
