<?xml version="1.0"?>
<package format="3">
  <name>nav_loc_localization</name>
  <version>0.0.1</version>
  <description>Localization for Go2 — odom/IMU fusion + (optionally) AMCL.</description>
  <maintainer email="you@example.com">v-yuanjielu</maintainer>
  <license>BSD-2-Clause</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- Heavy stuff we may want later (uncomment when used) -->
  <!-- <exec_depend>robot_localization</exec_depend>  EKF/UKF fusion -->
  <!-- <exec_depend>nav2_amcl</exec_depend>           AMCL particle filter -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
