<?xml version="1.0"?>
<package format="3">
  <name>nav_loc_navigation</name>
  <version>0.0.1</version>
  <description>Navigation (Nav2) wrapper for Go2.</description>
  <maintainer email="you@example.com">v-yuanjielu</maintainer>
  <license>BSD-2-Clause</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <!-- Add when wired in:
       <exec_depend>nav2_bringup</exec_depend>
       <exec_depend>nav2_lifecycle_manager</exec_depend>
       <exec_depend>nav2_controller</exec_depend>
       <exec_depend>nav2_planner</exec_depend>
       <exec_depend>nav2_bt_navigator</exec_depend>
  -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
